Fix order of assignment, condition and loop parsing